# catch22-rs

./: .pre-commit-config.yaml  Cargo.toml
examples/: run_features.rs
src/: error.rs  features.rs  fft.rs  hist_count.rs  lib.rs  primitive.rs  stat.rs  test_utility.rs  utility.rs
src/features/: co_auto_corr.rs  co_embed2_dist_tau_d_expfit_meandiff.rs  dn_histogram_mode.rs  dn_outlier_include_n_001_mdrmd.rs  fc_local_simple.rs  sb_binary_stats.rs  sb_motif_three.rs  sc_fluct_anal.rs
